The site is now basically functional on CFCL.

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
 # _config.yml
 
-  destination: ./reports
-  source:      ./recipes
+  destination:  _site
+  lsi:          false
+  pygments:     true
+  safe:         true
+  source:       .
